--- a/packages/styles/var.less
+++ b/packages/styles/var.less
@@ -9,6 +9,8 @@
 @borderColor: e('--@{namespace}-border-color');
 @backdropFilter: e('--@{namespace}-backdrop-filter');
 @backdropFilterBg: e('--@{namespace}-backdrop-filter-bg');
+@hoverColor: e('--@{namespace}-hover-color');
+@focusColor: e('--@{namespace}-focus-color');
 
 @placeholderColor: e('--@{namespace}-placeholder-color');
 @primaryColor: e('--@{namespace}-primary-color');
