--- a/packages/components/input/index.less
+++ b/packages/components/input/index.less
@@ -19,8 +19,7 @@
   }
   &:focus-within,
   &.is-focus {
-    border-color: e('var(@{input}-hover-color)');
-    box-shadow: 0 0 0 2px rgba(33, 150, 243, 0.35);
+    border-color: e('var(@{input}-focus-color)');
   }
   &.is-disabled {
     cursor: not-allowed;
