--- a/packages/components/radio/index.less
+++ b/packages/components/radio/index.less
@@ -61,6 +61,8 @@
   }
 
   &.is-button {
+    display: inline-flex;
+    align-items: center;
     position: relative;
     margin: 0 -1px 0 0px;
     padding: 0.4em 0.7em;
