--- a/packages/components/menu/index.less
+++ b/packages/components/menu/index.less
@@ -12,7 +12,7 @@
   }
 
   &:not(.horizontal-mode) {
-    width: calc(var(--w) * 1px);
+    width: var(--w);
     border-right: 1px solid @menu-aside-color;
   }
 }
