--- a/packages/components/table/index.less
+++ b/packages/components/table/index.less
@@ -1,10 +1,17 @@
 @import '../../styles/theme.less';
 
 .@{namespace}-table {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  min-height: 200px;
   position: relative;
   background-color: e('var(@{table}-bg)');
 
   &--content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
     width: 100%;
     overflow: auto;
   }
@@ -91,6 +98,7 @@
   }
 
   &__body {
+    flex: 1;
     overflow: auto;
     border-bottom: 1px solid e('var(@{table}-border-color)');
 
