--- a/packages/components/table/index.less
+++ b/packages/components/table/index.less
@@ -7,16 +7,22 @@
   &--content {
     width: 100%;
     overflow: auto;
+    scrollbar-width: none;
+
+    &:has(table.has-border) {
+      border: 1px solid e('var(@{table}-border-color)');
+    }
   }
 
   table {
     width: 100%;
     margin: 0;
+    table-layout: fixed;
   }
 
   thead {
     th {
-      border-bottom: 2px solid e('var(@{table}-border-color)');
+      border-bottom: 1px solid e('var(@{table}-border-color)');
 
       .cell {
         padding: 10px 5px;
@@ -59,6 +65,17 @@
     td,
     th {
       border: 1px solid e('var(@{table}-border-color)');
+
+      &:first-child {
+        border-width: 0 1px 1px 0;
+      }
+    }
+
+    tr:first-child {
+      td,
+      th {
+        border-top-width: 0;
+      }
     }
   }
 
