--- a/packages/components/button/index.less
+++ b/packages/components/button/index.less
@@ -22,18 +22,21 @@
   }
 
   &:hover {
-    background: #f5f5f5;
+    opacity: 0.8;
   }
 
   &:active {
-    filter: brightness(0.8);
-    transform: translate(0, 1px);
+    filter: brightness(0.7);
   }
 
   &[disabled] {
-    opacity: 0.8;
+    --color: #aaa !important;
     cursor: not-allowed;
-    filter: grayscale(1);
+    background: #eee;
+
+    &:hover {
+      background: #ddd !important;
+    }
 
     &:active {
       transform: none;
@@ -63,10 +66,6 @@
     .@{namespace}-button--icon {
       color: #fff;
     }
-
-    &:hover {
-      background: ~'hsl(from var(--bg) h s calc(l * 1.2))';
-    }
   }
 
   &.customize-color {
@@ -84,36 +83,43 @@
       color: inherit;
     }
 
-    &:hover {
-      filter: none;
-      background: ~'hsl(from var(--bg) h s calc(l * 1.8))';
-    }
-
     &[disabled] {
-      filter: grayscale(1);
+      color: #aaa !important;
+      background: transparent;
+      border-color: #eee;
 
       &:hover {
-        background: transparent;
+        border-color: #ddd !important;
+        background: transparent !important;
       }
     }
   }
 
   // type=text ===============================
   &[type='text'] {
-    color: var(--bg, @btn-default-text-color);
+    color: var(--color, @btn-default-text-color);
     background: transparent;
+
+    // 自定义与颜色 =============================
+    &.@{namespace}-button--theme-primary {
+      --color: @btn-primary-color;
+    }
+    &.@{namespace}-button--theme-success {
+      --color: @btn-success-color;
+    }
+    &.@{namespace}-button--theme-warn {
+      --color: @btn-warn-color;
+    }
+    &.@{namespace}-button--theme-error {
+      --color: @btn-error-color;
+    }
 
     &:hover {
       background: transparent;
     }
 
-    &[class*='--theme-'] {
-      span {
-        color: var(--bg);
-      }
-    }
     &[class*='--theme-'].has-bg {
-      background: ~'hsl(from var(--bg) h s calc(l * 1.8))';
+      background: ~'hsl(from var(--color) h s calc(l * 1.8))';
     }
 
     &.customize-color {
@@ -135,6 +141,19 @@
 
       &:hover {
         filter: brightness(1.1);
+      }
+    }
+
+    &[disabled] {
+      color: #aaa !important;
+      background: transparent !important;
+
+      &:hover {
+        color: #ddd !important;
+      }
+
+      &:active {
+        transform: none;
       }
     }
   }
