--- a/packages/components/button/index.less
+++ b/packages/components/button/index.less
@@ -1,24 +1,30 @@
 @import '../../styles/var.less';
 
 .@{namespace}-button {
-  position: relative;
-  padding: 0.25em 0.8em 0.3em;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  padding: 0.5em 0.8em;
   font-size: calc(var(--size) * 1px);
-  word-break: keep-all;
-  border-radius: 0.15em;
+  border-radius: var(--radius, 0.2em);
   border: none;
+  line-height: 1;
   color: var(--color, @btn-default-text-color);
   box-sizing: border-box;
   background-color: var(--bg, #eee);
-  transition: all 0.2s;
+  vertical-align: middle;
+  transition: 0.2s;
   cursor: pointer;
   outline: none;
 
   span {
-    color: inherit;
-    position: relative;
-    z-index: 2;
-    transition: 0.1s;
+    display: inline-flex;
+    align-items: center;
+
+    &:empty {
+      display: none;
+    }
   }
 
   &:hover {
@@ -30,157 +36,63 @@
   }
 
   &[disabled] {
-    --color: #aaa !important;
+    opacity: 0.7;
     cursor: not-allowed;
-    background: #eee;
 
     &:hover {
-      background: #ddd !important;
+      opacity: 0.8;
     }
 
     &:active {
       transform: none;
+      filter: none;
     }
   }
 
-  // 自定义与颜色 =============================
-  &--theme-primary {
+  &.primary {
     --bg: @btn-primary-color;
+    --color: #fff;
   }
-  &--theme-success {
+  &.success {
     --bg: @btn-success-color;
+    --color: #fff;
   }
-  &--theme-warn {
+  &.warn {
     --bg: @btn-warn-color;
+    --color: #fff;
   }
-  &--theme-error {
+  &.error {
     --bg: @btn-error-color;
-  }
-
-  &[class*='--theme-'],
-  &.customize-bg {
-    span {
-      color: var(--color, #fff);
-    }
-
-    .@{namespace}-button--icon {
-      color: #fff;
-    }
-  }
-
-  &.customize-color {
-    span {
-      color: var(--color);
-    }
+    --color: #fff;
   }
 
   &.plain {
-    color: var(--bg, @btn-default-text-color);
+    color: var(--bg, var(--color, @btn-default-text-color));
     background: transparent;
-    border: 1px solid var(--bg, #eee);
-
-    span {
-      color: inherit;
-    }
-
-    &[disabled] {
-      color: #aaa !important;
-      background: transparent;
-      border-color: #eee;
-
-      &:hover {
-        border-color: #ddd !important;
-        background: transparent !important;
-      }
-    }
-  }
-
-  // type=text ===============================
-  &[type='text'] {
-    color: var(--color, @btn-default-text-color);
-    background: transparent;
-
-    // 自定义与颜色 =============================
-    &.@{namespace}-button--theme-primary {
-      --color: @btn-primary-color;
-    }
-    &.@{namespace}-button--theme-success {
-      --color: @btn-success-color;
-    }
-    &.@{namespace}-button--theme-warn {
-      --color: @btn-warn-color;
-    }
-    &.@{namespace}-button--theme-error {
-      --color: @btn-error-color;
-    }
-
-    &:hover {
-      background: transparent;
-    }
-
-    &[class*='--theme-'].has-bg {
-      background: ~'hsl(from var(--color) h s calc(l * 1.8))';
-    }
-
-    &.customize-color {
-      &.has-bg {
-        background: ~'hsl(from var(--color) h s calc(l * 2))';
-      }
-
-      &:hover {
-        filter: brightness(1.1);
-      }
-
-      span {
-        color: var(--color);
-      }
-    }
-
-    &.customize-bg {
-      background: var(--bg);
-
-      &:hover {
-        filter: brightness(1.1);
-      }
-    }
-
-    &[disabled] {
-      color: #aaa !important;
-      background: transparent !important;
-
-      &:hover {
-        color: #ddd !important;
-      }
-
-      &:active {
-        transform: none;
-      }
-    }
+    border: 1px solid var(--bg, var(--color, #ddd));
   }
 
   &.round {
-    border-radius: 1em;
-  }
+    --radius: 1em;
 
-  &.only-icon {
-    &.round {
+    &:has(.@{namespace}-button--icon + span:empty) {
       padding: 0;
       width: 2em;
       height: 2em;
+      border-radius: 50%;
     }
   }
 
+  &.text {
+    color: var(--bg, var(--color, @btn-default-text-color));
+    background: transparent;
+  }
+
   &--icon {
-    // position: relative;
-    // z-index: 2;
     display: inline-flex;
     width: 1em;
-    color: @btn-default-text-color;
+    color: var(--color, @btn-default-text-color);
     overflow: hidden;
-
-    & + span {
-      margin-left: 5px;
-    }
   }
 }
 
