dev: 自适应高度调整

--- a/packages/components/input/index.less
+++ b/packages/components/input/index.less
@@ -82,6 +82,10 @@
     margin: 0.4em;
     display: block;
     line-height: 1.5;
+    field-sizing: content;
+    min-inline-size: 1ch;
+    // max-inline-size: 10ch;
+    max-block-size: var(--max-rows, inherit);
     resize: vertical;
     font-size: inherit;
     font-family: inherit;
