--- a/packages/components/buttonGroup/index.less
+++ b/packages/components/buttonGroup/index.less
@@ -2,43 +2,25 @@
   display: inline-flex;
 
   & > .vc-button {
-    position: relative;
-    margin: 0;
-    z-index: 0;
-
-    &:hover {
-      z-index: 5;
-    }
+    border-radius: 0;
+    border-right: 1px solid rgba(#000, 0.1);
 
     &:first-child {
-      border-top-right-radius: 0;
-      border-bottom-right-radius: 0;
-
-      &::before {
-        border-right: none;
-      }
+      border-radius: var(--radius, 0.2em) 0 0 var(--radius, 0.2em);
     }
     &:last-child {
-      border-top-left-radius: 0;
-      border-bottom-left-radius: 0;
-
-      &:not(.default) {
-        border-left-color: rgba(255, 255, 255, 0.5);
-      }
-    }
-
-    &:not(:first-child):not(:last-child) {
-      border-radius: 0;
-
-      &::before {
-        border-right: 0;
-      }
+      border-radius: 0 var(--radius, 0.2em) var(--radius, 0.2em) 0;
+      border-right: none;
     }
   }
 
-  & > .customize-color {
-    &:not(:last-child) {
-      margin-right: 1px;
+  &.round > .vc-button {
+    &:first-child {
+      border-radius: var(--radius, 2em) 0 0 var(--radius, 2em);
+    }
+    &:last-child {
+      border-radius: 0 var(--radius, 2em) var(--radius, 2em) 0;
+      border-right: none;
     }
   }
 }
