style: 优化样式，调整默认大小

--- a/packages/components/button/index.less
+++ b/packages/components/button/index.less
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: center;
   gap: 5px;
-  padding: 0.5em 0.8em;
+  padding: 7px 0.8em 9px;
   font-size: calc(var(--size) * 1px);
   border-radius: var(--radius, 0.2em);
   border: none;
@@ -73,7 +73,7 @@
   }
 
   &.round {
-    --radius: 1em;
+    --radius: 1.5em;
 
     &:has(.@{namespace}-button--icon + span:empty) {
       padding: 0;
