style: add checkbox group

--- a/packages/styles/theme.less
+++ b/packages/styles/theme.less
@@ -43,6 +43,12 @@
   @{layer}-bg: var(--vc-bg);
   @{layer}-mod-bg: rgba(#000, 0.2);
   @{layer}-header-color: var(--vc-text-color-primary);
+
+  // checkbox
+  @{checkbox}-checked-color: e('var(@{primaryColor}, #09f)');
+  @{checkbox}-disabled-color: e('var(@{textColorRegular}, #aaa)');
+  @{checkbox}-disabled-border-color: #aaa;
+  @{checkbox}-disabled-bg-color: #eee;
 }
 
 .dark {
