--- a/packages/styles/var.less
+++ b/packages/styles/var.less
@@ -25,6 +25,7 @@
 @input: e('--@{namespace}-input');
 @table: e('--@{namespace}-table');
 @layer: e('--@{namespace}-layer');
+@checkbox: e('--@{namespace}-checkbox');
 
 // font color
 @color-text-primary: #303133;
