--- a/packages/index.less
+++ b/packages/index.less
@@ -1,4 +1,3 @@
-/* 以下代码自动生成于 Fri Mar 18 2022 10:41:51 GMT+0800 (中国标准时间) */
-
 @import './styles/var.less';
+@import './styles/theme.less';
 @import './styles/transition.less';
