--- a/packages/styles/theme.less
+++ b/packages/styles/theme.less
@@ -15,6 +15,8 @@
   @{backdropFilter}: saturate(180%) blur(20px);
   @{backdropFilterBg}: rgba(#fff, 0.8);
 
+  @disabledColor: #aaa;
+
   // input
   @{input}-bg: e('var(@{bg})');
   @{input}-disabled-bg: e('var(@{disBg})');
@@ -45,9 +47,11 @@
   @{layer}-header-color: var(--vc-text-color-primary);
 
   // checkbox
-  @{checkbox}-checked-color: e('var(@{primaryColor}, #09f)');
-  @{checkbox}-disabled-color: e('var(@{textColorRegular}, #aaa)');
-  @{checkbox}-disabled-border-color: #aaa;
+  @{checkbox}-label-color: e('var(@{textColorPrimary})');
+  @{checkbox}-icon-border: 1px solid rgba(#000, 0.2);
+  @{checkbox}-checked-color: e('var(@{primaryColor})');
+  @{checkbox}-disabled-color: e('var(@{textColorRegular})');
+  @{checkbox}-disabled-border-color: @disabledColor;
   @{checkbox}-disabled-bg-color: #eee;
 }
 
@@ -61,6 +65,8 @@
 
   @{backdropFilter}: saturate(180%) blur(20px);
   @{backdropFilterBg}: rgba(22, 22, 23, 0.8);
+
+  @disabledColor: #555;
 
   // input
   @{input}-bg: e('var(@{bg})');
@@ -79,4 +85,11 @@
 
   // layer
   @{layer}-mod-bg: rgba(#fff, 0.1);
+
+  // checkbox
+  @{checkbox}-icon-border: 1px solid rgba(#fff, 0.2);
+  @{checkbox}-checked-color: e('var(@{primaryColor}, #09f)');
+  @{checkbox}-disabled-color: @color-text-regular;
+  @{checkbox}-disabled-border-color: @disabledColor;
+  @{checkbox}-disabled-bg-color: #222;
 }
